--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3 style="font-family:verdana;">&nbsp;More Stories About Him</h3>
     <h4>His picture in Lagos in 60s</h4>
     Was really looking cool <br>
-    <img src="chinuaachebe.jpg" width="500" alt="Chinua Achebe's Picture" height="300"/>
+    <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="500" alt="Chinua Achebe's Picture" height="300"/>
     <br><br>
     <footer>2021 his page was designed by Kingsley Ibe</footer>
 </body>
