--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Brief Background</h2>
     <p style="font-family:verdana;">
         <strong><i>Chinua Achebe (16 November 1930 – 21 March 2013)</i></strong> was a Nigerian novelist, poet, and critic who is regarded as the most dominant figure in modern African literature <i>The store became a success in no time.
-        <hr> 
+        <br><br>
 <stong><i>Birth and background (1930–1947)</i></strong>
   His father Isaiah Okafo Achebe was a teacher and evangelist and his mother Janet Anaenechi Iloegbunam was the daughter of a blacksmith from Awka.  His birthplace was Saint Simon’s Church, Nneobi, which was near the Igbo village of Ogidi; the area was part of British Colonial Nigeria at the time.
     </p>
@@ -23,10 +23,10 @@
         <strong><i>University (1948–1953)</i></strong> In 1948, in preparation for independence, Nigeria's first university was opened. Known as University College (now the University of Ibadan), it was an associate college of the University of London. Achebe was admitted as a Major Scholar in the university's first intake and given a bursary to study medicine. After the final examinations at Ibadan in 1953, Achebe was awarded a second-class degree.
     </p>
     <hr>
-    <h3 style="font-family:verdana;">&nbsp;More Stories About Him</h3>
-    <h4>His picture in Lagos in 60s</h4>
-    Was really looking cool <br>
-    <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="500" alt="Chinua Achebe's Picture" height="300"/>
+    <h4 style="font-family:verdana;">&nbsp;More Stories About Him</h4>
+    <h5>His picture in Lagos in 60s</h5>
+    Was really looking cool <br><br>
+    <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="100" alt="Chinua Achebe's Picture" height="100"/>
     <br><br>
     <footer>2021 his page was designed by Kingsley Ibe</footer>
 </body>
