--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <p>
         <strong><i>University (1948–1953)</i></strong> In 1948, in preparation for independence, Nigeria's first university was opened. Known as University College (now the University of Ibadan), it was an associate college of the University of London. Achebe was admitted as a Major Scholar in the university's first intake and given a bursary to study medicine. After the final examinations at Ibadan in 1953, Achebe was awarded a second-class degree.
     </p>
-    <hr>
+    
     <h4 style="font-family:verdana;">&nbsp;More Stories About Him</h4>
-    <h5>His picture in Lagos in 60s</h5>
-    Was really looking cool <br><br>
+    <br><br>
+    <h5>His picture in Lagos in the 60s, was really looking cool</h5>
+    
     <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="100" alt="Chinua Achebe's Picture" height="100"/>
     <br><br>
     <footer>2021 his page was designed by Kingsley Ibe</footer>
