--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body style="background-color:#74992e;font-family:verdana;">
-    <h1 style="font-size:40px;color:yellow">Welcome to Chinua Achebe Tribute Page</h1>
+<body style="background-color:#455b1b;font-family:verdana;">
+    <h1 style="font-size:40px;color:gray">Welcome to Chinua Achebe Tribute Page</h1>
     <h2>Brief Background</h2>
     <p style="font-family:verdana;">
         <strong><i>Chinua Achebe (16 November 1930 – 21 March 2013)</i></strong> was a Nigerian novelist, poet, and critic who is regarded as the most dominant figure in modern African literature <i>The store became a success in no time.
         <br><br>
-<stong><i>Birth and background (1930–1947)</i></strong>
+<strong><i>Birth and background (1930–1947)</i></strong>
   His father Isaiah Okafo Achebe was a teacher and evangelist and his mother Janet Anaenechi Iloegbunam was the daughter of a blacksmith from Awka.  His birthplace was Saint Simon’s Church, Nneobi, which was near the Igbo village of Ogidi; the area was part of British Colonial Nigeria at the time.
     </p>
     <p>
