--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-color:#455b1b;font-family:verdana;">
     <h1 style="font-size:40px;color:gray">Welcome to Chinua Achebe Tribute Page</h1>
     <h2>Brief Background</h2>
-    <p style="font-family:verdana;">
+    <p style="font-family:verdana;color:white">
         <strong><i>Chinua Achebe (16 November 1930 – 21 March 2013)</i></strong> was a Nigerian novelist, poet, and critic who is regarded as the most dominant figure in modern African literature <i>The store became a success in no time.
         <br><br>
 <strong><i>Birth and background (1930–1947)</i></strong>
