--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-color:#455b1b;font-family:verdana;">
     <h1 style="font-size:40px;color:gray">Welcome to Chinua Achebe Tribute Page</h1>
     <h2>Brief Background</h2>
-    <p style="font-family:verdana;color:white">
+    <p style="font-family:verdana;color:white; font-size:10px">
         <strong><i>Chinua Achebe (16 November 1930 – 21 March 2013)</i></strong> was a Nigerian novelist, poet, and critic who is regarded as the most dominant figure in modern African literature <i>The store became a success in no time.
         <br><br>
 <strong><i>Birth and background (1930–1947)</i></strong>
@@ -32,7 +32,7 @@
     </p>
     <p><strong>Nigeria-Biafra War (1967–1970)</strong> In May <strong>1967</strong>, the southeastern region of Nigeria broke away to form the Republic of Biafra; in July the Nigerian military attacked to suppress what it considered an unlawful rebellion. Achebe's colleague, Christopher Okigbo, who had become a close friend of the family (especially of Achebe's son, young Ikechukwu), volunteered to join the secessionist army while simultaneously working at the press. Achebe's house was bombed one afternoon; Christie had taken the children to visit her sick mother, so the only victims were his books and papers. The Achebe family narrowly escaped disaster several times during the war.</p>
     <p><strong>Later years and death (2000–2013)</strong>For his seventieth birthday in <strong>2000</strong>, a sizable celebration took place at Bard College and was attended by writers and critics from around the world. That same year he published Home and Exile, a semi-biographical collection on both his thoughts on life away from Nigeria, as well as discussion of the emerging school of Native American literature. Achebe died after a short illness on 21 March <strong>2013</strong> in Boston, United States. An unidentified source close to the family said that he was ill for a while and had been hospitalised in the city.</p>
-    <p>His picture in Lagos in the 60s, was really looking cool</p>
+    <p>His picture in Lagos in the 60s, was really looking cool...</p>
     <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="100" alt="Chinua Achebe's Picture" height="100"/>
     <br>
     <footer>2021 his page was designed by Kingsley Ibe</footer>
