--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <body style="background-color:#455b1b;font-family:verdana;">
     <h1 style="font-size:40px;color:gray">Welcome to Chinua Achebe Tribute Page</h1>
     <h2>Brief Background</h2>
-    <p style="font-family:verdana;color:white; font-size:20px">
+    <p style="font-family:verdana;color:white">
         <strong><i>Chinua Achebe (16 November 1930 – 21 March 2013)</i></strong> was a Nigerian novelist, poet, and critic who is regarded as the most dominant figure in modern African literature <i>The store became a success in no time.
         <br><br>
 <strong><i>Birth and background (1930–1947)</i></strong>
   His father Isaiah Okafo Achebe was a teacher and evangelist and his mother Janet Anaenechi Iloegbunam was the daughter of a blacksmith from Awka.  His birthplace was Saint Simon’s Church, Nneobi, which was near the Igbo village of Ogidi; the area was part of British Colonial Nigeria at the time.
     </p>
-    <p style="font-family:verdana;color:white; font-size:20px">
+    <p style="font-family:verdana;color:white">
         <strong><i>University (1948–1953)</i></strong> In 1948, in preparation for independence, Nigeria's first university was opened. Known as University College (now the University of Ibadan), it was an associate college of the University of London. Achebe was admitted as a Major Scholar in the university's first intake and given a bursary to study medicine. After the final examinations at Ibadan in 1953, Achebe was awarded a second-class degree.
     </p>
     
     <h4 style="font-family:verdana;">&nbsp;More Stories About Him</h4>
-     <p style="font-family:verdana;color:white; font-size:20px"><strong>Teaching and producing (1953–1956)</strong> As a teacher he urged his students to read extensively and be original in their work. He taught in Oba for four months, but when an opportunity arose in 1954 to work for the Nigerian Broadcasting Service (NBS), he left the school and moved to Lagos.
+     <p style="font-family:verdana;color:white"><strong>Teaching and producing (1953–1956)</strong> As a teacher he urged his students to read extensively and be original in their work. He taught in Oba for four months, but when an opportunity arose in 1954 to work for the Nigerian Broadcasting Service (NBS), he left the school and moved to Lagos.
     </p>
-    <p style="font-family:verdana;color:white; font-size:20px"><strong>Things Fall Apart (1957–1960)</strong> The book was received well by the British press, and received positive reviews from critic Walter Allen and novelist Angus Wilson. Three days after publication, The Times Literary Supplement wrote that the book "genuinely succeeds in presenting tribal life from the inside."
+    <p style="font-family:verdana;color:white"><strong>Things Fall Apart (1957–1960)</strong> The book was received well by the British press, and received positive reviews from critic Walter Allen and novelist Angus Wilson. Three days after publication, The Times Literary Supplement wrote that the book "genuinely succeeds in presenting tribal life from the inside."
     </p>
-    <p style="font-family:verdana;color:yellow; font-size:20px"><strong>Voice of Nigeria and African Writers Series (1962–1964)</strong>Once he returned to Nigeria, Achebe was promoted at the NBS to the position of Director of External Broadcasting. One of his first duties was to help create the Voice of Nigeria network. The station broadcast its first transmission on New Year's Day.
+    <p style="font-family:verdana;color:yellow"><strong>Voice of Nigeria and African Writers Series (1962–1964)</strong>Once he returned to Nigeria, Achebe was promoted at the NBS to the position of Director of External Broadcasting. One of his first duties was to help create the Voice of Nigeria network. The station broadcast its first transmission on New Year's Day.
     </p>
-    <p style="font-family:verdana;color:white; font-size:20px"><strong>Nigeria-Biafra War (1967–1970)</strong> In May <strong>1967</strong>, the southeastern region of Nigeria broke away to form the Republic of Biafra; in July the Nigerian military attacked to suppress what it considered an unlawful rebellion. Achebe's colleague, Christopher Okigbo, who had become a close friend of the family (especially of Achebe's son, young Ikechukwu), volunteered to join the secessionist army while simultaneously working at the press. Achebe's house was bombed one afternoon; Christie had taken the children to visit her sick mother, so the only victims were his books and papers. The Achebe family narrowly escaped disaster several times during the war.</p>
-    <p style="font-family:verdana;color:#376715; font-size:20px"><strong>Later years and death (2000–2013)</strong>For his seventieth birthday in <strong>2000</strong>, a sizable celebration took place at Bard College and was attended by writers and critics from around the world. That same year he published Home and Exile, a semi-biographical collection on both his thoughts on life away from Nigeria, as well as discussion of the emerging school of Native American literature. Achebe died after a short illness on 21 March <strong>2013</strong> in Boston, United States. An unidentified source close to the family said that he was ill for a while and had been hospitalised in the city.</p>
-    <p style="font-family:verdana;color:white; font-size:20px">His picture in Lagos in the 60s, was really looking cool...</p>
-    <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="300" alt="Chinua Achebe's Picture" height="200"/>
+    <p style="font-family:verdana;color:white"><strong>Nigeria-Biafra War (1967–1970)</strong> In May <strong>1967</strong>, the southeastern region of Nigeria broke away to form the Republic of Biafra; in July the Nigerian military attacked to suppress what it considered an unlawful rebellion. Achebe's colleague, Christopher Okigbo, who had become a close friend of the family (especially of Achebe's son, young Ikechukwu), volunteered to join the secessionist army while simultaneously working at the press. Achebe's house was bombed one afternoon; Christie had taken the children to visit her sick mother, so the only victims were his books and papers. The Achebe family narrowly escaped disaster several times during the war.</p>
+    <p style="font-family:verdana;color:#376715"><strong>Later years and death (2000–2013)</strong>For his seventieth birthday in <strong>2000</strong>, a sizable celebration took place at Bard College and was attended by writers and critics from around the world. That same year he published Home and Exile, a semi-biographical collection on both his thoughts on life away from Nigeria, as well as discussion of the emerging school of Native American literature. Achebe died after a short illness on 21 March <strong>2013</strong> in Boston, United States. An unidentified source close to the family said that he was ill for a while and had been hospitalised in the city.</p>
+    <p style="font-family:verdana;color:white">His picture in Lagos in the 60s, was really looking cool...</p>
+    <img src="https://i.ibb.co/fY1DRXm/chinuaachebe.jpg" width="200" alt="Chinua Achebe's Picture" height="300"/>
     <br>
     <footer>2021 his page was designed by Kingsley Ibe</footer>
 </body>
